# Trength

./: .gitignore  CMakeLists.txt  README.md
include/trength/: info.hpp
include/trength/graphics/: backends.hpp  context.hpp  window.hpp
include/trength/opengl/: context.hpp
include/trength/vulkan/: context.hpp
src/graphics/: context.cpp  window.cpp
src/opengl/: context.cpp
src/vulkan/: context.cpp
